@@ -1,5 +1,7 @@
 2007-12-02  Andreas Kirschbaum
 
+	* Add "really disconnect?" dialog when ESC is pressed.
+
 	* ESC aborts bind/unbind command.
 
 	* Do not crash at application termination when using -N.
